--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,10 @@
 		</developer>
 	</developers>
 
+	<modules>
+		<module>perfect-hashes</module>
+	</modules>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<generated.sources.dir>generated-sources</generated.sources.dir>
@@ -80,6 +84,9 @@
 							<goals>
 								<goal>jar</goal>
 							</goals>
+							<configuration>
+								<quiet>true</quiet>
+							</configuration>
 						</execution>
 					</executions>
 				</plugin>
