--- a/perfect-hashes/pom.xml
+++ b/perfect-hashes/pom.xml
@@ -2,19 +2,20 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.blogspot.remis-thoughts</groupId>
 	<artifactId>perfect-hashes</artifactId>
 	<version>${project.parent.version}</version>
 	<packaging>jar</packaging>
 
 	<name>perfect-hashes</name>
 	<description>A Perfect Hash Function Generator in Java</description>
-	<url>http://remis-thoughts.blogspot.com</url>
 	<parent>
 		<groupId>com.blogspot.remis-thoughts</groupId>
 		<artifactId>remis-thoughts</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
+	<properties>
+		<shortname>perfecthashes</shortname>
+	</properties>
 
 	<build>
 		<plugins>
