--- a/dynamic-optimisation/pom.xml
+++ b/dynamic-optimisation/pom.xml
@@ -48,5 +48,10 @@
 			<artifactId>guava</artifactId>
 			<version>[10.0,]</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava-testlib</artifactId>
+			<version>[12.0,]</version>
+		</dependency>
 	</dependencies>
 </project>
