--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,17 @@
 		<module>triple-buffering</module>
 	</modules>
 
-	<!-- for NAR, until it's in the central repo... -->
 	<pluginRepositories>
+		<!-- for NAR, until it's in the central repo... -->
 		<pluginRepository>
 			<id>nar-repo</id>
 			<name>Duns' Maven Snapshot Repository</name>
 			<url>http://duns.github.com/maven-snapshots</url>
+		</pluginRepository>
+		<!-- for ruby gems used in the build process -->
+		<pluginRepository>
+			<id>rubygems-release</id>
+			<url>http://rubygems-proxy.torquebox.org/releases</url>
 		</pluginRepository>
 	</pluginRepositories>
 
@@ -153,54 +158,6 @@
 					</executions>
 				</plugin>
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>exec-maven-plugin</artifactId>
-					<version>1.2.1</version>
-					<executions>
-						<!-- need to "gem install literate_md" for this script: -->
-						<execution>
-							<id>tangle</id>
-							<goals>
-								<goal>exec</goal>
-							</goals>
-							<phase>generate-sources</phase>
-							<configuration>
-								<executable>/usr/bin/literate_md</executable>
-								<arguments>
-									<argument>--files</argument>
-									<argument>${basedir}/src/main/md/${project.artifactId}.md</argument>
-									<argument>--tangle</argument>
-									<argument>--lang</argument>
-									<argument>${language}</argument>
-									<argument>--outputdir</argument>
-									<argument>${project.build.directory}/${generated.sources.dir}</argument>
-								</arguments>
-							</configuration>
-						</execution>
-						<execution>
-							<id>weave</id>
-							<goals>
-								<goal>exec</goal>
-							</goals>
-							<phase>generate-sources</phase>
-							<configuration>
-								<executable>/usr/bin/literate_md</executable>
-								<arguments>
-									<argument>--files</argument>
-									<argument>${basedir}/src/main/md/${project.artifactId}.md</argument>
-									<argument>--weave</argument>
-									<argument>--lang</argument>
-									<argument>java</argument>
-									<argument>--outputdir</argument>
-									<argument>${project.build.directory}</argument>
-									<argument>--standalone</argument>
-								</arguments>
-								<skip>${skip.javadoc}</skip>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
 					<version>1.0.0</version>
@@ -225,6 +182,66 @@
 					</configuration>
 				</plugin>
 				<plugin>
+					<groupId>de.saumya.mojo</groupId>
+					<artifactId>gem-maven-plugin</artifactId>
+					<version>0.29.0</version>
+					<extensions>true</extensions>
+					<executions>
+						<execution>
+							<id>tangle</id>
+							<phase>generate-sources</phase>
+							<goals>
+								<goal>exec</goal>
+							</goals>
+							<configuration>
+								<script><![CDATA[
+require 'rubygems'
+load '${project.build.directory}/rubygems-gem-maven-plugin/gems/literate_md-1.0.5/bin/literate_md'								
+								]]></script>
+								<args><![CDATA[
+                                    --files ${basedir}/src/main/md/${project.artifactId}.md
+                                    --tangle
+                                    --lang ${language}
+                                    --outputdir ${project.build.directory}/${generated.sources.dir}
+                                ]]></args>
+								<!-- redcarpet has C bits -->
+								<supportNative>true</supportNative>
+							</configuration>
+						</execution>
+						<execution>
+							<id>weave</id>
+							<phase>generate-sources</phase>
+							<goals>
+								<goal>exec</goal>
+							</goals>
+							<configuration>
+								<script><![CDATA[
+require 'rubygems'
+return if ${skip.javadoc}
+load '${project.build.directory}/rubygems-gem-maven-plugin/gems/literate_md-1.0.5/bin/literate_md'								
+								]]></script>
+								<args><![CDATA[
+                                    --files ${basedir}/src/main/md/${project.artifactId}.md
+                                    --weave
+                                    --lang ${language}
+                                    --outputdir ${project.build.directory}
+                                    --standalone
+                                ]]></args>
+								<!-- redcarpet has C bits -->
+								<supportNative>true</supportNative>
+							</configuration>
+						</execution>
+					</executions>
+					<dependencies>
+						<dependency>
+							<groupId>rubygems</groupId>
+							<artifactId>literate_md</artifactId>
+							<version>1.0.5</version>
+							<type>gem</type>
+						</dependency>
+					</dependencies>
+				</plugin>
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-antrun-plugin</artifactId>
 					<version>1.7</version>
@@ -233,7 +250,7 @@
 							<!-- we need to turn the HTML snippet into a full doc if we want to -->
 							<!-- use it as a package.html header -->
 							<id>move-weave</id>
-							<phase>process-sources</phase>
+							<phase>compile</phase>
 							<goals>
 								<goal>run</goal>
 							</goals>
@@ -251,6 +268,7 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-nar-plugin</artifactId>
+					<version>2.1-SNAPSHOT</version>
 					<extensions>true</extensions>
 					<configuration>
 						<libraries>
@@ -279,6 +297,23 @@
 							</testIncludePaths>
 						</c>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>antlr-maven-plugin</artifactId>
+					<version>2.2</version>
+					<executions>
+						<execution>
+							<id>generate-from-grammar</id>
+							<phase>process-sources</phase>
+							<goals>
+								<goal>generate</goal>
+							</goals>
+							<configuration>
+								<grammars>*.g</grammars>
+							</configuration>
+						</execution>
+					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
