--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
 		</pluginRepository>
 	</pluginRepositories>
 
+	<repositories>
+		<!-- for the LP wrapper -->
+		<repository>
+			<id>xypron-release</id>
+			<url>http://rsync.xypron.de/repository</url>
+		</repository>
+	</repositories>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<generated.sources.dir>generated-sources</generated.sources.dir>
@@ -178,6 +186,25 @@
 										<execute />
 									</action>
 								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											de.saumya.mojo
+										</groupId>
+										<artifactId>
+											gem-maven-plugin
+										</artifactId>
+										<versionRange>
+											[0.29.0,)
+										</versionRange>
+										<goals>
+											<goal>exec</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
 					</configuration>
@@ -300,18 +327,19 @@ load '${project.build.directory}/rubygems-gem-maven-plugin/gems/literate_md-1.0.
 					</configuration>
 				</plugin>
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>antlr-maven-plugin</artifactId>
-					<version>2.2</version>
+					<groupId>org.antlr</groupId>
+					<artifactId>antlr3-maven-plugin</artifactId>
+					<version>3.4</version>
 					<executions>
 						<execution>
 							<id>generate-from-grammar</id>
 							<phase>process-sources</phase>
 							<goals>
-								<goal>generate</goal>
+								<goal>antlr</goal>
 							</goals>
 							<configuration>
-								<grammars>*.g</grammars>
+								<printGrammar>true</printGrammar>
+								<libDirectory>${project.build.directory}/${generated.sources.dir}</libDirectory>
 								<sourceDirectory>${project.build.directory}/${generated.sources.dir}</sourceDirectory>
 								<outputDirectory>${project.build.directory}/${generated.sources.dir}</outputDirectory>
 							</configuration>
