--- a/compile-to-asm/pom.xml
+++ b/compile-to-asm/pom.xml
@@ -42,6 +42,14 @@
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr3-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<forkMode>once</forkMode>
+					<argLine>-Djava.library.path=/usr/local/lib:/usr/local/lib/jni</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -63,9 +71,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-            <groupId>de.xypron.linopt</groupId>
-            <artifactId>linopt</artifactId>
-            <version>1.3</version>
-        </dependency>
+			<groupId>de.xypron.linopt</groupId>
+			<artifactId>linopt</artifactId>
+			<version>1.3</version>
+		</dependency>
 	</dependencies>
 </project>
