--- a/dynamic-optimisation/pom.xml
+++ b/dynamic-optimisation/pom.xml
@@ -52,5 +52,10 @@
 			<artifactId>guava-testlib</artifactId>
 			<version>[12.0,]</version>
 		</dependency>
+		<dependency>
+			<groupId>net.java.loci</groupId>
+			<artifactId>jsr308-all</artifactId>
+			<version>[1.1.2,]</version>
+		</dependency>
 	</dependencies>
 </project>
