redcarpet 3.0.0 needs a newer ruby version

--- a/literate_md/pom.xml
+++ b/literate_md/pom.xml
@@ -62,7 +62,7 @@ Options:
 		<dependency>
 			<groupId>rubygems</groupId>
 			<artifactId>redcarpet</artifactId>
-			<version>[0,)</version>
+			<version>[0,2.3.0]</version>
 			<type>gem</type>
 		</dependency>
 		<dependency>
