--- a/compile-to-asm/pom.xml
+++ b/compile-to-asm/pom.xml
@@ -50,6 +50,24 @@
 					<argLine>-Djava.library.path=${env.LD_LIBRARY_PATH}</argLine>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.16</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+						<configuration>
+							<forkCount>1</forkCount>
+							<failIfNoTests>true</failIfNoTests>
+							<argLine>-Djava.library.path=${env.LD_LIBRARY_PATH}</argLine>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
