--- a/compile-to-asm/pom.xml
+++ b/compile-to-asm/pom.xml
@@ -83,6 +83,12 @@
 			<version>3.4</version>
 		</dependency>
 		<dependency>
+			<!-- for OpenBitSet -->
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>4.8.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>[1.0,]</version>
